--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -28,28 +28,36 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textColor="#ffffff" />
 
-        <ImageView
-            android:id="@+id/poster"
-            android:layout_width="160dp"
-            android:layout_height="210dp"
-            android:padding="8dp"
-            android:layout_below="@+id/title"/>
-
-        <TextView
-            android:id="@+id/overview"
+        <LinearLayout
+            android:id="@+id/linear1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_below="@+id/title"
-            android:layout_toEndOf="@+id/poster"
-            android:hint="Overview and stuff"
-            android:padding="5dp"
-            android:textColor="#ffffff" />
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/poster"
+                android:layout_width="160dp"
+                android:layout_height="210dp"
+                android:padding="8dp"
+                android:layout_below="@+id/title"/>
+
+            <TextView
+                android:id="@+id/overview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/title"
+                android:layout_toEndOf="@+id/poster"
+                android:hint="Overview and stuff"
+                android:padding="5dp"
+                android:textColor="#ffffff" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/images"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/poster"
+            android:layout_below="@+id/linear1"
             android:layout_marginLeft="10dp"
             android:textColor="#ffffff"
             android:layout_marginTop="10dp"
