--- a/app/src/main/res/layout/row_backdrop_item.xml
+++ b/app/src/main/res/layout/row_backdrop_item.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/poster"
-        android:layout_width="260sp"
-        android:layout_height="180sp"
+        android:layout_width="220dp"
+        android:layout_height="140dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="5dp"/>
